harness/test/errors/053_block_in_arithmetic.eu
# Mistake: using a block (structured value) in arithmetic
config: { timeout: 30 }
result: config + 5
